Added the remaining unrealized parameters, minor bug fix.